--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NASA</string>
+    <string name="app_name">NASA_APOD</string>
     <string name="action_settings">Налаштування</string>
     <string name="ac_name_image_list">Image List Example</string>
     <string name="ac_name_image_grid">Image Grid Example</string>
@@ -27,7 +27,7 @@
     <string name="settings">Налаштування</string>
     <string name="dismiss">Скасувати</string>
 
-    <string name="no_data_to_display">Немає даних для відображення. Перевірте інтернет підключення і потягніть вниз, щоб оновити дані.</string>
+    <string name="no_data_to_display">Немає даних для відображення. Перевірте інтернет підключення і потягніть вниз, щоб оновити.</string>
     <string name="change_wallpaper_success">Шпалери успішно змінено</string>
     <string name="change_wallpaper_error">Помилка! Шпалери не змінено.</string>
 </resources>
