--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NASA</string>
+    <string name="app_name">NASA_APOD</string>
     <string name="action_settings">Settings</string>
     <string name="ac_name_image_list">Image List Example</string>
     <string name="ac_name_image_grid">Image Grid Example</string>
@@ -27,7 +27,7 @@
     <string name="settings">Settings</string>
     <string name="dismiss">Dismiss</string>
 
-    <string name="no_data_to_display">No data to display. Check your internet connection and swipe down to refresh data.</string>
+    <string name="no_data_to_display">No data to display. Check your internet connection and swipe down to refresh.</string>
     <string name="change_wallpaper_success">Wallpaper successfully changed</string>
     <string name="change_wallpaper_error">Failed! Wallpaper is not changed</string>
 </resources>
